--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,7 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
-
-#MPP
-kotlin.mpp.enableGranularSourceSetsMetadata=true
-kotlin.native.enableDependencyPropagation=false
+android.suppressUnsupportedCompileSdk=34
 
 # iOS
 org.jetbrains.compose.experimental.uikit.enabled=true
