--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-kotlin = "1.8.20"
-gradle = "7.4.2"
+kotlin = "1.9.0"
+gradle = "8.1.0"
 ktLint = "10.3.0"
 detekt = "1.19.0"
 gradleVersionUpdate = "0.46.0"
@@ -37,8 +37,8 @@ androidxCore = "1.7.0"
 material = "1.6.0"
 appCompat = "1.4.1"
 constraintLayout = "2.1.4"
-compose = "1.2.0-alpha08"
-composeMaterial3 = "1.0.0-alpha13"
+compose = "1.5.0"
+composeMaterial3 = "1.2.0-alpha05"
 composeActivity = "1.4.0"
 composeConstraintLayout = "1.0.0-rc01"
 accompanist = "0.25.1"
