--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 kotlin = "1.9.0"
+ksp = "1.9.0-1.0.13"
 gradle = "8.1.0"
 ktLint = "10.3.0"
 detekt = "1.19.0"
@@ -8,6 +9,7 @@ googleServices = "4.3.14"
 firebaseAppDistribution = "3.0.3"
 firebaseCrashlytics = "2.9.2"
 firebasePerformance = "1.4.2"
+compose-destinations = "1.9.52"
 
 # Kotlin Multiplatform Version
 kotlinxCoroutines = "1.6.4"
@@ -80,7 +82,7 @@ kotlinX-serialization-plugin = { id = "org.jetbrains.kotlin.plugin.serialization
 kmp-NativeCoroutines-plugin = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmpNativeCoroutines" }
 sqlDelight-plugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelight" }
 buildKonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildKonfig" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 googleServices-plugin = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 
 firebase-crashlytics-plugin = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlytics" }
@@ -147,6 +149,11 @@ firebase-analytics = { module = "com.google.firebase:firebase-analytics-ktx" }
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx" }
 firebase-performance = { module = "com.google.firebase:firebase-perf" }
 oneBoneToolbar = { module = "me.onebone:toolbar-compose", version.ref = "oneBoneToolbar" }
+
+# ComposeDestination
+compose-destinations-core = { module = "io.github.raamcosta.compose-destinations:core", version.ref = "compose-destinations" }
+compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "compose-destinations" }
+compose-destinations-animations-core = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "compose-destinations" }
 
 #Tests Lib Dependencies
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
