--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,6 +56,7 @@ composeRatingBar = "1.1.1"
 leakCanary = "2.9.1"
 pagingCompose = "1.0.0-alpha14"
 oneBoneToolbar = "2.3.4"
+compose-horizontal-calendar = "1.0.4"
 
 jUnit = "4.13.2"
 truth = "1.1.3"
@@ -161,6 +162,9 @@ vico-compose = { module = "com.patrykandpatrick.vico:compose", version.ref = "vi
 vico-compose-m3 = { module = "com.patrykandpatrick.vico:compose-m3", version.ref = "vico" }
 
 compose-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+
+
+compose-horizontal-calendar = { module = "com.github.JoelKanyi:HorizontalCalendarView", version.ref = "compose-horizontal-calendar" }
 
 #Tests Lib Dependencies
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
