--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,6 +57,7 @@ leakCanary = "2.9.1"
 pagingCompose = "1.0.0-alpha14"
 oneBoneToolbar = "2.3.4"
 compose-horizontal-calendar = "1.0.4"
+core-library-desugaring = "1.1.5"
 
 jUnit = "4.13.2"
 truth = "1.1.3"
@@ -165,6 +166,8 @@ compose-icons-extended = { module = "androidx.compose.material:material-icons-ex
 
 
 compose-horizontal-calendar = { module = "com.github.JoelKanyi:HorizontalCalendarView", version.ref = "compose-horizontal-calendar" }
+
+core-library-desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "core-library-desugaring" }
 
 #Tests Lib Dependencies
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
