--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+componentsResources = "1.5.0"
 kotlin = "1.9.0"
 ksp = "1.9.0-1.0.13"
 gradle = "8.1.0"
@@ -94,6 +95,7 @@ firebase-performance-plugin = { id = "com.google.firebase.firebase-perf", versio
 
 [libraries]
 #Kotlin Multiplatform Lib Dependencies
+components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
 kotlinX-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinCore" }
 kotlinX-serializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinxSerializationJson" }
