--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,9 @@
 [versions]
 componentsResources = "1.5.0"
+koalaplotCore = "0.4.0-dev1"
 kotlin = "1.9.0"
 gradle = "8.1.0"
+kotlinxCoroutinesSwing = "1.7.3"
 ktLint = "10.3.0"
 detekt = "1.19.0"
 gradleVersionUpdate = "0.46.0"
@@ -11,6 +13,7 @@ kotlinxSerializationJson = "1.5.0"
 kotlinxDateTime = "0.4.0"
 material3WindowSizeClassMultiplatform = "0.3.1"
 napier = "2.4.0"
+primitiveAdapters = "2.0.0"
 sqlDelight = "1.5.5"
 multiplatformSettings = "0.8.1"
 compose = "1.5.0"
@@ -35,9 +38,12 @@ sqlDelight-plugin = { id = "com.squareup.sqldelight", version.ref = "sqlDelight"
 
 [libraries]
 components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
+koalaplot-core = { module = "io.github.koalaplot:koalaplot-core", version.ref = "koalaplotCore" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinCore" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinxCoroutinesSwing" }
 kotlinX-serializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinxSerializationJson" }
 material3-window-size-multiplatform = { module = "dev.chrisbanes.material3:material3-window-size-class-multiplatform", version.ref = "material3WindowSizeClassMultiplatform" }
+primitive-adapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "primitiveAdapters" }
 sqlDelight-runtime = { module = "com.squareup.sqldelight:runtime", version.ref = "sqlDelight" }
 sqlDelight-coroutine = { module = "com.squareup.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
 sqlDelight-android = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqlDelight" }
