- add app launcher icon - refactor task progress screens and logic - minor cleanup

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="false"
         android:supportsRtl="true"
         android:label="@string/focusbloom"
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme">
         <activity
             android:name="com.joelkanyi.focusbloom.android.MainActivity"
