Fix missing collect single event

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -68,3 +68,4 @@ voyager-tabNavigator = { module = "cafe.adriel.voyager:voyager-tab-navigator", v
 voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
 core-library-desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "core-library-desugaring" }
 accompanist-systemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemUIController" }
+lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common", version = "2.6.2" }
