--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 componentsResources = "1.5.3"
+core = "1.12.0"
 koalaplotCore = "0.4.0-dev1"
 korau = "4.0.6"
 kotlin = "1.9.10"
@@ -17,12 +18,14 @@ sqlDelight = "2.0.0"
 multiplatformSettings = "1.1.0"
 compose = "1.5.10-beta01"
 core-library-desugaring = "2.0.3"
+toast4j = "0.2.0"
 voyager = "1.0.0-rc07"
 compose-activity = "1.8.0"
 koin-compose = "1.1.0"
 spotless = "5.17.1"
 ktlint = "11.6.1"
 accompanist-systemUIController = "0.30.1"
+annotationJvm = "1.7.0"
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
@@ -41,6 +44,7 @@ ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
 [libraries]
 components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
+core = { module = "androidx.core:core", version.ref = "core" }
 koalaplot-core = { module = "io.github.koalaplot:koalaplot-core", version.ref = "koalaplotCore" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinCore" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose"}
@@ -62,6 +66,7 @@ multiplatformSettings-coroutines = { module = "com.russhwolf:multiplatform-setti
 
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "compose-activity" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
+toast4j = { module = "de.mobanisto:toast4j", version.ref = "toast4j" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 voyager-bottomSheetNavigator = { module = "cafe.adriel.voyager:voyager-bottom-sheet-navigator", version.ref = "voyager" }
 voyager-tabNavigator = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager" }
@@ -69,3 +74,6 @@ voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", vers
 core-library-desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "core-library-desugaring" }
 accompanist-systemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemUIController" }
 lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common", version = "2.6.2" }
+annotation-jvm = { group = "androidx.annotation", name = "annotation-jvm", version.ref = "annotationJvm" }
+
+stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
