--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 componentsResources = "1.5.3"
 core = "1.12.0"
+jna = "5.13.0"
 koalaplotCore = "0.4.0"
 kotlin = "1.9.10"
 gradle = "8.1.2"
@@ -44,6 +45,7 @@ ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 [libraries]
 components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "componentsResources" }
 core = { module = "androidx.core:core", version.ref = "core" }
+jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
 koalaplot-core = { module = "io.github.koalaplot:koalaplot-core", version.ref = "koalaplotCore" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinCore" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose"}
