--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,28 @@
 [versions]
 kotlin = "1.9.21"
 compose = "1.5.11"
-koinCore = "3.5.0"
-koinAndroid = "3.5.0"
+koinCore = "3.5.3"
+koinAndroid = "3.5.3"
 gradle = "8.2.1"
 sqlDelight = "2.0.1"
-voyager = "1.0.0-rc10"
+voyager = "1.0.0"
 componentsResources = "1.5.11"
 multiplatformSettings = "1.1.1"
-koin-compose = "1.1.0"
+koin-compose = "1.1.2"
 core = "1.12.0"
 jna = "5.13.0"
-koalaplotCore = "0.4.0"
+koalaplotCore = "0.5.1"
 kotlinxCoroutinesSwing = "1.7.3"
 kotlinxSerializationJson = "1.6.2"
 kotlinxDateTime = "0.5.0"
 material3WindowSizeClassMultiplatform = "0.3.1"
-napier = "2.6.1"
+napier = "2.7.1"
 core-library-desugaring = "2.0.4"
 toast4j = "0.2.0"
-compose-activity = "1.8.1"
+compose-activity = "1.8.2"
 spotless = "5.17.1"
 accompanist-systemUIController = "0.32.0"
-annotationJvm = "1.7.0"
+annotationJvm = "1.7.1"
 
 [plugins]
 compose-multiplatform = { id = "org.jetbrains.compose", version.ref = "compose" }
@@ -61,10 +61,14 @@ multiplatformSettings-coroutines = { module = "com.russhwolf:multiplatform-setti
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "compose-activity" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 toast4j = { module = "de.mobanisto:toast4j", version.ref = "toast4j" }
+
+# Voyager
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 voyager-bottomSheetNavigator = { module = "cafe.adriel.voyager:voyager-bottom-sheet-navigator", version.ref = "voyager" }
 voyager-tabNavigator = { module = "cafe.adriel.voyager:voyager-tab-navigator", version.ref = "voyager" }
 voyager-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager" }
+voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
+
 core-library-desugaring = { module = "com.android.tools:desugar_jdk_libs", version.ref = "core-library-desugaring" }
 accompanist-systemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemUIController" }
 lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common", version = "2.6.2" }
