--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,23 +6,31 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
 
   build:
     name: 🔨 Build
     runs-on: ubuntu-latest
     steps:
-
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: '17'
+          distribution: 'adopt'
+          cache: gradle
 
       - name: Make gradle executable
         run: chmod +x ./gradlew
 
-      - name: Build with gradle
-        run: ./gradlew build --stacktrace
+      - name: Build app
+        run: ./gradlew assemble --stacktrace
