--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "1.9.22"
-compose = "1.5.12"
+compose = "1.6.0-beta02"
 koinCore = "3.5.3"
 koinAndroid = "3.5.3"
 gradle = "8.2.2"
@@ -19,7 +19,7 @@ napier = "2.7.1"
 core-library-desugaring = "2.0.4"
 toast4j = "0.2.0"
 compose-activity = "1.8.2"
-spotless = "5.17.1"
+spotless = "6.25.0"
 accompanist-systemUIController = "0.34.0"
 
 [plugins]
