--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 
 androidDriver = "2.0.2"
 kotlin = "1.9.23"
-compose = "1.6.2"
+compose = "1.6.10-dev1608"
 koinCore = "3.5.6"
 koinAndroid = "3.5.3"
 gradle = "8.3.2"
