create common app version for android and desktop on gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ org.jetbrains.compose.experimental.jscanvas.enabled=true
 
 # KMP
 kotlin.mpp.enableCInteropCommonization=true
+
+# App version
+version=1.0.5
