--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,31 @@
 [versions]
 
 androidDriver = "2.0.2"
-kotlin = "2.0.20"
-compose = "1.7.0-beta02"
+kotlin = "2.0.21"
+compose = "1.7.0"
 
-koin = "3.5.6"
-koinCompose = "3.6.0-wasm-alpha2"
-koinComposeMultiplatform = "1.2.0-alpha3"
+koin = "4.0.0"
+koinCompose = "4.0.0"
+koinComposeMultiplatform = "4.0.0"
 
 gradle = "8.5.2"
 sqlDelight = " 2.0.2"
-multiplatformSettings = "1.1.1"
-core = "1.13.1"
+multiplatformSettings = "1.2.0"
+core = "1.15.0"
 jna = "5.14.0"
 koalaplotCore = "0.5.4"
 kotlinxCoroutinesSwing = "1.8.1"
-kotlinxSerializationJson = "1.7.1"
+kotlinxSerializationJson = "1.7.3"
 kotlinxDateTime = "0.6.1"
 material3WindowSizeClassMultiplatform = "0.5.0"
 napier = "2.7.1"
-core-library-desugaring = "2.0.4"
+core-library-desugaring = "2.1.3"
 toast4j = "0.2.0"
-compose-activity = "1.9.0"
+compose-activity = "1.9.3"
 spotless = "6.25.0"
-accompanist-systemUIController = "0.34.0"
-androidx-lifecycle = "2.8.0"
-androidx-navigation = "2.8.0-alpha09"
+accompanist-systemUIController = "0.36.0"
+androidx-lifecycle = "2.8.3"
+androidx-navigation = "2.8.0-alpha10"
 
 [libraries]
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "androidDriver" }
