--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,34 @@
 [versions]
 
 androidDriver = "2.0.2"
-kotlin = "2.1.20"
-compose = "1.7.1"
+kotlin = "2.2.0"
+compose = "1.8.2"
 
-koin = "4.0.0"
-koinCompose = "4.0.0"
-koinComposeMultiplatform = "4.0.0"
+koin = "4.1.0"
+koinCompose = "4.1.0"
+koinComposeMultiplatform = "4.1.0"
 
-gradle = "8.5.2"
-sqlDelight = " 2.0.2"
+gradle = "8.11.0"
+sqlDelight = " 2.1.0"
 multiplatformSettings = "1.3.0"
-core = "1.13.1"
-jna = "5.15.0"
-koalaplotCore = "0.7.0"
+core = "1.16.0"
+jna = "5.17.0"
+koalaplotCore = "0.9.0"
 kotlinxCoroutinesSwing = "1.10.2"
-kotlinxSerializationJson = "1.8.1"
+kotlinxSerializationJson = "1.9.0"
 kotlinxDateTime = "0.6.2"
 material3WindowSizeClassMultiplatform = "0.5.0"
 napier = "2.7.1"
-core-library-desugaring = "2.1.3"
+core-library-desugaring = "2.1.5"
 toast4j = "0.2.0"
-compose-activity = "1.9.3"
-spotless = "7.0.3"
+compose-activity = "1.10.1"
+spotless = "7.0.4"
 accompanist-systemUIController = "0.36.0"
-androidx-lifecycle = "2.8.4"
-androidx-navigation = "2.8.0-alpha10"
+androidx-lifecycle = "2.9.1"
+androidx-navigation = "2.8.0-alpha13"
+
+android-compileSdk = "36"
+android-minSdk = "24"
 
 [libraries]
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "androidDriver" }
