--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ compose-activity = "1.10.1"
 spotless = "7.0.4"
 accompanist-systemUIController = "0.36.0"
 androidx-lifecycle = "2.9.1"
-androidx-navigation = "2.8.0-alpha13"
+androidx-navigation = "2.9.0-beta03"
 
 android-compileSdk = "36"
 android-minSdk = "24"
